--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-av": "^15.0.2",
     "expo-document-picker": "^13.0.3",
     "expo-image-picker": "^16.0.6",
+    "expo-linear-gradient": "~14.0.2",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
