--- a/package.json
+++ b/package.json
@@ -10,37 +10,39 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~4.0.1",
-    "@react-native-community/datetimepicker": "github:react-native-datetimepicker/datetimepicker",
+    "@expo/metro-runtime": "~5.0.4",
+    "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/datetimepicker": "8.3.0",
     "@react-native-firebase/app": "^21.13.0",
     "@react-native-firebase/auth": "^21.13.0",
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.1.2",
-    "expo": "~52.0.46",
-    "expo-av": "^15.0.2",
-    "expo-document-picker": "^13.0.3",
-    "expo-image-picker": "^16.0.6",
-    "expo-linear-gradient": "~14.0.2",
-    "expo-status-bar": "~2.0.1",
+    "axios": "^1.9.0",
+    "expo": "^53.0.0",
+    "expo-av": "~15.1.4",
+    "expo-document-picker": "~13.1.5",
+    "expo-image-picker": "~16.1.4",
+    "expo-linear-gradient": "~14.1.4",
+    "expo-status-bar": "~2.2.3",
     "firebase": "^11.6.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.7",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
     "react-native-calendars": "^1.1310.0",
-    "react-native-gesture-handler": "^2.24.0",
+    "react-native-gesture-handler": "~2.25.0",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-paper": "^5.13.1",
-    "react-native-reanimated": "^3.17.1",
-    "react-native-safe-area-context": "^5.3.0",
-    "react-native-screens": "^4.9.1",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.13",
-    "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "react-native-web": "^0.20.0",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.26.0",
     "@react-native-community/cli": "^18.0.0",
     "@react-native/metro-config": "^0.78.2"
   },
