--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-native-svg": "^15.11.2",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.20.0",
-    "zod": "^3.24.3"
+    "zod": "^3.24.3",
+    "expo-updates": "~0.28.14"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
